--- a/disberseBrowserNode.0.0.0/1/package.json
+++ b/disberseBrowserNode.0.0.0/1/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "bundle": "browserify src/index.js > public/bundle.js",
-    "serve": "static public -a 10.0.0.10 -p 9090 -H '{\"Cache-Control\": \"no-cache, must-revalidate\"}'",
+    "serve": "static public -a 0.0.0.0 -p 9090 -H '{\"Cache-Control\": \"no-cache, must-revalidate\"}'",
     "start": "npm run bundle && npm run serve"
   },
   "license": "MIT",
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "bip39": "^2.5.0",
+    "cryptico": "^1.0.2",
     "detect-dom-ready": "^1.0.2",
     "ethereumjs-wallet": "^0.6.2",
     "libp2p-mplex": "~0.8.0",
@@ -26,8 +27,14 @@
     "libp2p-switch": "^0.40.8",
     "libp2p-webrtc-star": "~0.15.3",
     "libp2p-websockets": "~0.12.0",
+    "node-rsa": "^1.0.1",
     "peer-book": "^0.8.0",
     "peer-info": "~0.14.1",
+    "rsa-key": "0.0.6",
     "store": "^2.0.12"
+  },
+  "pkg": {
+    "scripts": "src/*.js",
+    "assets": "public/*"
   }
 }
