--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@nodeutils/defaults-deep": "^1.1.0",
     "libp2p": "^0.23.1",
+    "libp2p-crypto": "^0.14.1",
     "libp2p-kad-dht": "^0.10.6",
     "libp2p-pnet": "^0.1.0",
     "libp2p-railing": "^0.9.2",
     "libp2p-secio": "^0.10.1",
     "libp2p-spdy": "^0.12.1",
     "libp2p-tcp": "^0.13.0",
+    "libp2p-webrtc-star": "^0.15.5",
     "libp2p-websockets": "^0.12.0",
     "peer-id": "^0.12.0",
     "peer-info": "^0.14.1",
